--- a/index.html
+++ b/index.html
@@ -8,5 +8,23 @@
 </head>
 <body>
     <h1>Tic Tac Toe!</h1>
+    <div class="board">
+        <div class="row1">
+            <div class="1"></div>
+            <div class="2"></div>
+            <div class="3"></div>                
+        </div>
+        <div class="row2">
+            <div class="4"></div>
+            <div class="5"></div>
+            <div class="6"></div>    
+        </div>
+        <div class="row3">
+            <div class="7"></div>
+            <div class="8"></div>
+            <div class="9"></div>    
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
