--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 <body>
     <h1>Tic Tac Toe!</h1>
     <div class="board">
-        <div class="row1">
-            <div class="1"></div>
-            <div class="2"></div>
-            <div class="3"></div>                
+        <div class="row">
+            <div class="a3"></div>
+            <div class="b3"></div>
+            <div class="c3"></div>                
         </div>
-        <div class="row2">
-            <div class="4"></div>
-            <div class="5"></div>
-            <div class="6"></div>    
+        <div class="row">
+            <div class="a2"></div>
+            <div class="b2"></div>
+            <div class="c2"></div>    
         </div>
-        <div class="row3">
-            <div class="7"></div>
-            <div class="8"></div>
-            <div class="9"></div>    
+        <div class="row">
+            <div class="a1"></div>
+            <div class="b1"></div>
+            <div class="c1"></div>    
         </div>
     </div>
     <script src="script.js"></script>
