--- a/index.html
+++ b/index.html
@@ -8,21 +8,23 @@
 </head>
 <body>
     <h1>Tic Tac Toe!</h1>
+    <button class="reset-btn">Reset the board</button>
+    <h3 class="now-moving"></h3>
     <div class="board">
         <div class="row">
-            <div class="a1"></div>
-            <div class="b1"></div>
-            <div class="c1"></div>                
+            <div id="a1"></div>
+            <div id="b1"></div>
+            <div id="c1"></div>                
         </div>
         <div class="row">
-            <div class="a2"></div>
-            <div class="b2"></div>
-            <div class="c2"></div>    
+            <div id="a2"></div>
+            <div id="b2"></div>
+            <div id="c2"></div>    
         </div>
         <div class="row">
-            <div class="a3"></div>
-            <div class="b3"></div>
-            <div class="c3"></div>    
+            <div id="a3"></div>
+            <div id="b3"></div>
+            <div id="c3"></div>    
         </div>
     </div>
     <script src="script.js"></script>
